--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-architect
 
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: 'trilliwon'
+description: this site is just for me.
 
-show_downloads: ["true" or "false" to indicate whether to provide a download URL]
+show_downloads: true
 #google_analytics: [Your Google Analytics tracking ID]
