--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Won's Blog
+title: Meerkat
 email: trilliwon@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   I will write my stories here.
