--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,31 @@
-title: Meerkat
-email: trilliwon@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  I will write my stories here.
-baseurl: "/blog"
-url: "trilliwon.github.io/me"
-twitter_username: trilliwon
-github_username:  trilliwon
+# Permalinks
+permalink:      /:year-:month-:day/:title
 
-markdown: kramdown
-theme: minima
+# Setup
+title:          trilliwon
+paginate:       5
+baseurl:        "/blog"
+url:            "https://trilliwon.github.io"
+
+# Assets
+sass:
+  sass_dir:     _sass
+  style:        :compressed
+
+# Build settings
+markdown:       kramdown
+
+# About
+author:
+  name:         trilliwon
+  url:          http://www.trilliwon.com
+  email:        trilliwon@gmail.com
+
+# Custom vars
+version:        3.4.1
+github:
+  repo:         https://github.com/trilliwon/blog
+
+# Gems
 gems:
-  - jekyll-feed
-exclude:
-  - Gemfile
-  - Gemfile.lock
+  - jekyll-paginate
